<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginScreenFragment">
    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.95"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image_mq"
        android:tint="#6F000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/title_wrapper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_activity_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            app:autoSizeTextType="uniform"
            app:fontFamily="@font/rambla_bold" />
    </FrameLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/google_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_wrapper_layout"
        app:layout_constraintVertical_bias="0.93"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_with_email_button"
        app:layout_constraintEnd_toEndOf="@+id/facebook_login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/facebook_login_button"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_with_email_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/manual_sign_up_button"
        android:fontFamily="@font/asap_italic"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/email_signin_text"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="14sp"
        app:autoSizeMinTextSize="10sp"
        app:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_layout"
        app:layout_constraintEnd_toEndOf="@+id/google_login_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/google_login_button"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button" />

    <LinearLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sign_in_button_login_screen"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:background="@android:color/transparent"
            android:onClick="onSignInClick"
            android:text="@string/common_signin_button_text"
            android:textAllCaps="false"
            android:textColor="#0000EE"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sign_in_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>