...
    <string name="item_info_title">Item Information</string>
    <string name="title_activity_giver_menu">GiverMenu</string>
    <string name="title_activity_sign_up">Sign in</string>


    <!--Drawer elements-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick-Up Menu</string>
    <string name="nav_header_subtitle">Search for items that suit your needs</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_show_all_title">Show All</string>
    <string name="nav_filter_title">Filter</string>
    <string name="nav_food_title">Food</string>
    <string name="nav_study_material_title">Study Material</string>
    <string name="nav_furniture_title">Households</string>
...
    <string name="filter_by_distance">Filter by distance</string>
    <string name="radius">Radius:</string>
    <string name="kilometers">km</string>


    <!--Login activity elements-->
    <string name="email_signin_text">Sign up with E-mail</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="bad_credentials">Credentials has been malformed or expired</string>
    <string name="duplicate_user">User with same credentials already exists</string>
    <string name="wrong_credentials">Wrong credentials. Please try again</string>
    <string name="credentials_missing">Please fill your credentials</string>
    <string name="sign_up">Sign Up</string>
...
    <string name="show_phone_number">Show Phone Number</string>
    <string name="get_favorites_notifications">Receive notifications from favorites</string>
    <string name="change_password">Change Password</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_items">My Items</string>
    <string name="pending_requests">Requested Items</string>
    <string name="log_out">Log Out</string>
    <string name="discard_changes_title">Discard changes</string>
    <string name="discard_changes_name_body">Are you sure you want to discard the changes to your name?</string>
    <string name="discard_changes_profile_body">Are you sure you want to discard the changes to your profile?</string>
    <string name="updating_profile_name">Updating name…</string>
    <string name="profile_name_updated">Name updated!</string>
    <string name="undo_snackbar">UNDO</string>
...
