...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <RelativeLayout
...
                android:layout_below="@id/mute_favorites"
                android:layout_toEndOf="@id/select_app_language_text"
                android:layout_marginStart="24dp"
                android:layout_alignTop="@id/select_app_language_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/select_app_language_text"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="50dp"
                android:background="@android:color/holo_red_dark"
...
